--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -5,8 +5,10 @@ on:
     branches:
       - main
 
-jobs:
+env:
+  VERSION: $(( $(cat version.txt) + 1 ))
 
+jobs:
   build_push_supermario_docker_image:
     runs-on: ubuntu-latest
 
@@ -19,5 +21,5 @@ jobs:
 
       - name: Build and Push Docker Image
         run: |
-          docker build -t trannam210900/gitopspj:1 .
-          docker push trannam210900/gitopspj:1
+          docker build -t trannam210900/gitopspj::${{ env.VERSION }} .
+          docker push trannam210900/gitopspj::${{ env.VERSION }}
