--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -3,7 +3,7 @@ name: "Build and push Super Mario Docker image with static tag to Docker Hub"
 on:
   push:
     branches:
-      - main
+      - main1
 
 env:
   VERSION: $(( $(cat version.txt) + 1 ))
