--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -3,7 +3,7 @@ name: "Build and push Super Mario Docker image with static tag to Docker Hub"
 on:
   push:
     branches:
-      - main1
+      - main
 
 env:
   VERSION: $(( $(cat version.txt) + 1 ))
@@ -21,5 +21,5 @@ jobs:
 
       - name: Build and Push Docker Image
         run: |
-          docker build -t trannam210900/gitopspj::${{ env.VERSION }} .
-          docker push trannam210900/gitopspj::${{ env.VERSION }}
+          docker build -t trannam210900/gitopspj:${{ env.VERSION }} .
+          docker push trannam210900/gitopspj:${{ env.VERSION }}
