--- a/.github/workflows/e2e-gitops.yaml
+++ b/.github/workflows/e2e-gitops.yaml
@@ -67,10 +67,10 @@ jobs:
       - name: Run Trivy vulnerability scanner in tarball mode
         uses: aquasecurity/trivy-action@master
         with:
-          input: /github/workspace/supermariolatestdockerimage.tar
+          input: ${{ github.workspace }}/gitopspj.tar
           exit-code: '0'
-          severity: 'CRITICAL,HIGH'
-          
+          severity: 'CRITICAL,HIGH'  
+                  
   update_k8s_yaml_version_file_with_latest_image_tag:
     runs-on: ubuntu-latest
     needs: run_container_image_scan_on_supermario_docker_image
